# Yolov3_Android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/uk/lcas/andreatramo/yolov3_objectdetector/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Yolo.cpp  Yolo.h  YoloJNI.cpp  YoloJNI.h
app/src/main/java/uk/lcas/andreatramo/yolov3_objectdetector/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/uk/lcas/andreatramo/yolov3_objectdetector/: ExampleUnitTest.java
